force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Relation__c/ucinn_ascendv2__Matching_Challenge_Relation__c.object-meta.xml
<CustomObject>
    <description>Junction object to link GP objects like designation details to the Challenge and its requirement</description>
    <label>Matching Challenge Relation</label>
    <nameField>
        <displayFormat>MR-{0000000}</displayFormat>
        <label>Matching Challenge Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Challenge Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>