force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Relation__c/fields/ucinn_ascendv2__Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount__c</fullName>
    <description>Amount field that is updated by workflow to be used for roll up summary</description>
    <inlineHelpText>Amount field that is updated by workflow to be used for roll up summary</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>