force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Relation__c/fields/ucinn_ascendv2__Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Formula__c</fullName>
    <description>Designation Detail Amount</description>
    <formula>ucinn_ascendv2__Designation_Detail__r.ucinn_ascendv2__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Designation Detail Amount</inlineHelpText>
    <label>Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>