force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Relation__c/fields/ucinn_ascendv2__Amount_Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Paid_To_Date__c</fullName>
    <description>Amount Paid to Date updated by workflow to be used for rollup</description>
    <inlineHelpText>Amount Paid to Date updated by workflow to be used for rollup</inlineHelpText>
    <label>Amount Paid To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>