force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Relation__c/fields/ucinn_ascendv2__Amount_Paid_To_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Paid_To_Date_Formula__c</fullName>
    <description>Amount paid to date same Designation on the designation detail</description>
    <formula>ucinn_ascendv2__Designation_Detail__r.ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount paid to date same Designation on the designation detail</inlineHelpText>
    <label>Amount Paid To Date Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>