force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Relation__c/fields/ucinn_ascendv2__Matching_Challenge_Requirement__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge_Requirement__c</fullName>
    <description>Matching Challenge Requirement to link it to.</description>
    <inlineHelpText>Matching Challenge Requirement to link it to.</inlineHelpText>
    <label>Matching Challenge Requirement</label>
    <referenceTo>ucinn_ascendv2__Matching_Challenge_Requirement__c</referenceTo>
    <relationshipLabel>Matching Challenge Relations</relationshipLabel>
    <relationshipName>Match_Chal_Rel_Matching_Chal_Requirement</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>