force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge_Relation__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that matches the challenge requirement.</description>
    <inlineHelpText>Opportunity that matches the challenge requirement.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Matching Challenge Relations</relationshipLabel>
    <relationshipName>Matching_Challenge_Relations_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>